--- a/cart.html
+++ b/cart.html
@@ -11,7 +11,11 @@
     <div id="cookie-alert"><div id="cookie-alert-body"><span>FoodApp uses internal and external Cookies to ensure that we give you the best experience on our website and for statistical purposes. If you continue browsing, without changing your settings, we'll assume that you accept our Cookies Policy. <a href="javascript:void(0)">Find out more</a>.</span><span id="close-cookie-alert" onclick="close_elem('cookie-alert')">X</span></div></div>
     <div id="food-wrapper">
         <div id="food-header">
-          <a href="index.html">Home</a>&nbsp;&nbsp;<a href="cart.html">Cart</a>
+         <a href="index.html">Home</a>
+         &nbsp;&nbsp;
+         <a href="cart.html">Cart</a>
+         &nbsp;&nbsp;
+         <a href="add-menu.html">Add menu</a>         
         </div>
        
         <div id="food-content">
@@ -86,8 +90,12 @@
             </tbody>
           </table>
           <div id="table-footer">
-            <!--input type="checkbox"--> <span>By confirming your order, you agreed with our <a href="javascript:void(0)">terms</a> and <a href="javascript:void(0)">conditions</a></span>
-            <p>SubTotal <span id="subtotal">N1,000,334</span></p>
+          
+          <p>Shipping Fee <span >₦0.0</span></p>
+          <p>Sub Total <span id="subtotal">₦0.0</span></p>
+          <p><b>Grand Total</b> <span id="grandtotal">₦0.0</span></p>
+          <div id="terms-span"> <!--input type="checkbox"--> <span>By confirming your order, you agreed with our <a href="javascript:void(0)">terms</a> and <a href="javascript:void(0)">conditions</a></span></div>
+          <br>
           <button class="btn-md">Confirm Order</button>
           </div>
         </div>
