--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
 <body>
@@ -13,7 +14,11 @@
     <div id="cookie-alert"><div id="cookie-alert-body"><span>FoodApp uses internal and external Cookies to ensure that we give you the best experience on our website and for statistical purposes. If you continue browsing, without changing your settings, we'll assume that you accept our Cookies Policy. <a href="javascript:void(0)">Find out more</a>.</span><span id="close-cookie-alert" onclick="close_elem('cookie-alert')">X</span></div></div>
     <div id="food-wrapper">
         <div id="food-header">
-            <a href="index.html">Home</a>&nbsp;&nbsp;<a href="cart.html">Cart</a>
+            <a href="index.html">Home</a>
+            &nbsp;&nbsp;
+            <a href="cart.html">Cart</a>
+            &nbsp;&nbsp;
+            <a href="add-menu.html">Add menu</a>
         </div>
         <div id="food-content">
             <div class="vendor-lister">
@@ -94,7 +99,36 @@
                         </a>
                     </div>   
 
-                 </div>   
+                 </div>  
+                 
+                <div class="vendor-review">
+                    <a class="expand fright" href="javascript">View all reviews <i class="fa fa-angle-right"></i></a>
+                    <span class="clear"></span>
+                    <div class="vendor-review-wrapper">
+                                            <div class="review-lister">
+                                                <div>Review author</div>
+                                                <div>Interdum et malesuada fames ac an Ut ut ex non purus bibendum scelerisque</div>
+                                                <div><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i
+                                                        class="fa fa-star"></i> </div>
+                                            </div>
+                                            <div class="review-lister">
+                                                <div>Review author</div>
+                                                <div>Interdum et malesuada fames ac an Ut ut ex non purus bibendum scelerisque</div>
+                                                <div><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></div>
+                                            </div>
+                                            <div class="review-lister">
+                                                <div>Review author</div>
+                                                <div>Interdum et malesuada fames ac an Ut ut ex non purus bibendum scelerisque</div>
+                                                <div><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i
+                                                        class="fa fa-star"></i></div>
+                                            </div>
+                                            <div class="review-lister">
+                                                <div>Review author</div>
+                                                <div>Interdum et malesuada fames ac an Ut ut ex non purus bibendum scelerisque</div>
+                                                <div><i class="fa fa-star"></i> <i class="fa fa-star"></i> </div>
+                                            </div>
+                    </div>
+                </div>
                  <div class="front-page-ads">
                          <h2>Adverts placement</h2>
                  </div>
